tests/golden/reject/return_const_negative_uint64_reject.goo
package main

func f() uint64 {
	return -1
}

func main() {
	println(f())
}
